[ntintel] asserts about copying unaligned array element

XMLWordPrintable

    • 11
    • b14
    • x86
    • windows

        # assert(is_aligned(from, alignment)) failed: must be aligned: ...
        was still observed after JDK-8220348.

        src/jdk.jdwp.agent/share/native/libjdwp/ArrayReferenceImpl.c uses stack allocated jlong and jdouble as source for SetLongArrayRegion and SetDoubleArrayRegion. Windows 32 bit only uses 4 Byte alignment by default which is not sufficient.

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: