8239856: [ntintel] asserts about copying unaligned array element

Reviewed-by: stuefe, sspitsyn